# Generalized-filter

./: CMakeLists.txt  DESIGN.md  FILTER-v2.md  IMPLEMENTATION_SUMMARY.md  PHASE0_COMPLETION_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PIPELINE.md  README.md  phase1_integration_test  test_ekf_state  test_ekf_update  test_fusion_thread  test_imu_preintegration  test_location_update  test_lockfree_queue  test_mag_update  test_no_alias  test_quat  test_synthetic_imu  validate_phase0
android/: AndroidManifest.xml  GnssService.java
android/com/fusion/: FusedState.java  FusionService.java  Pose.java  ThreadStats.java
docs/: BUG_FIX_INTEGER_OVERFLOW.md  DEPLOYMENT_GUIDE.md  LOCATION_IMPLEMENTATION_RESULTS.md  NEXT_LEVEL_ANALYSIS.md  PHASE_6_IMPLEMENTATION.md  PHASE_6_PROGRESS.md  PHONE_LOCATION_INDEX.md  PHONE_LOCATION_PROPOSAL.md  PHONE_LOCATION_SUMMARY.md  PHONE_LOCATION_VISUAL_COMPARISON.md
examples/: phase1_integration_test.cpp  test_ekf_state.cpp  test_ekf_update.cpp  test_full_pipeline.cpp  test_fusion_pipeline.cpp  test_fusion_thread.cpp  test_imu_preintegration.cpp  test_location_update.cpp  test_lockfree_queue.cpp  test_mag_update.cpp  test_minimal_loop.cpp  validate_phase0.cpp
src/core/: lockfree_queue.hpp  quaternion.cpp  quaternion.hpp  sensor_types.cpp  sensor_types.hpp  types.hpp
src/filter/: ekf_state.cpp  ekf_state.hpp  ekf_update.cpp  ekf_update.hpp  imu_preintegration.cpp  imu_preintegration.hpp  location_update.cpp  location_update.hpp  mag_update.cpp  mag_update.hpp
src/math/: vector_math.cpp  vector_math.hpp
src/sensors/: android_imu.cpp  android_imu.hpp  android_mag.cpp  android_mag.hpp  jni_gnss.cpp  jni_gnss.hpp  jni_location.cpp  jni_location.hpp
src/service/: fusion_jni.cpp  fusion_thread.cpp  fusion_thread.hpp  service_types.hpp
src/utils/: logger.hpp
src/validation/: synthetic_gnss.cpp  synthetic_gnss.hpp  synthetic_imu.cpp  synthetic_imu.hpp
